quite a bit of help from David Geisler-Moroder.

Added "rpict" and "rvu" variables to rad, and made these as well as
the "oconv", "mkillum" and "pfilt" variables accept an alternate
command path in each case.  Change suggested by Lars Grobe based
on similar Radzilla (radz) facility by Carsten Bauer.

Fixed rad -v N specification to use actual view name if one.

Fixed error in mkillum calculation where it neglected indirect
source contributions from BTDF illum's.

Added GMT and LATLONG header lines for Greenwich Mean Time and
degrees North Latitude / East Longitude.

Added gendaylit to distribution (finally).

Added ability in vwright(1) to get view from command line arguments.

Created genklemsamp(1) utility to generate samples suitable for
BSDF-based annual calculations.  This is the first Perl script to
be added to Radiance.  Hopefully, others will follow.

Added klems_int.cal file to compute Klems bins for windows.

Created genskyvec  utility to sample a particular sky and
evaluate average radiance over the standard Tregenza sky patches.

Created dctimestep program to compute a set of sensor values or
a combined image for a particular time using the daylight
coefficient method.

Created src/rt/rayfifo.c for first-in/first-out handling of
multiprocessing by raypcalls.c.

Added -n option to rtrace for executing on multiple cores
using new rayfifo calls.

=====================
Version 4.1

Changed ranimate behavior so remote login under a different user
doesn't necessarily require the presence of the originating user's
home directory.

Changed standard transmission function normalization back to what
it was in version 3.5, following recommendation of David Geisler-Moroder,
who pointed out that the revised BTDF increased too much at grazing.

Changed rad behavior with -N >1 on single view to call rpiece.

Updated SCons build system for MINGW compilation, thanks to Christian
Kohler.

Added -u option to rlam for unbuffered output.